--- a/scheduling/pom.xml
+++ b/scheduling/pom.xml
@@ -2,14 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>gov.va.api.health</groupId>
     <artifactId>service-starter</artifactId>
+    <groupId>gov.va.api.health</groupId>
     <version>7.0.15</version>
-    <relativePath/>
   </parent>
   <groupId>gov.va.api.lighthouse</groupId>
   <artifactId>scheduling</artifactId>
-  <version>7.0.15</version>
+  <version>0.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <dependencies>
     <dependency>
