--- a/scheduling-tests/pom.xml
+++ b/scheduling-tests/pom.xml
@@ -10,6 +10,9 @@
   <artifactId>scheduling-tests</artifactId>
   <version>0.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <properties>
+    <docker.imageName>lighthouse-${project.artifactId}</docker.imageName>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>gov.va.api.health</groupId>
