--- a/scheduling/pom.xml
+++ b/scheduling/pom.xml
@@ -10,6 +10,9 @@
   <artifactId>scheduling</artifactId>
   <version>0.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <properties>
+    <docker.imageName>lighthouse-${project.artifactId}</docker.imageName>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
