--- a/scheduling-tests/pom.xml
+++ b/scheduling-tests/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>test-starter</artifactId>
     <groupId>gov.va.api.health</groupId>
     <version>7.0.15</version>
+    <relativePath/>
   </parent>
   <groupId>gov.va.api.lighthouse</groupId>
   <artifactId>scheduling-tests</artifactId>
