Add actuator endpoints
- Updates mvn dependencies to create actuator endpoints

--- a/scheduling/pom.xml
+++ b/scheduling/pom.xml
@@ -15,8 +15,13 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>service-auto-config</artifactId>
     </dependency>
   </dependencies>
 </project>
