Created controller for Appointment, integration test, and systemdefinitions

--- a/scheduling/pom.xml
+++ b/scheduling/pom.xml
@@ -12,6 +12,7 @@
   <packaging>jar</packaging>
   <properties>
     <docker.imageName>lighthouse-${project.artifactId}</docker.imageName>
+    <fhir-resources.version>5.0.11</fhir-resources.version>
   </properties>
   <dependencies>
     <dependency>
@@ -22,6 +23,11 @@
     <dependency>
       <groupId>gov.va.api.health</groupId>
       <artifactId>service-auto-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>us-core-r4</artifactId>
+      <version>${fhir-resources.version}</version>
     </dependency>
   </dependencies>
 </project>
