--- a/scheduling-tests/pom.xml
+++ b/scheduling-tests/pom.xml
@@ -20,6 +20,12 @@
       <artifactId>sentinel</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>us-core-r4</artifactId>
+      <version>5.0.11</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
