--- a/scheduling-tests/pom.xml
+++ b/scheduling-tests/pom.xml
@@ -12,6 +12,7 @@
   <version>0.0.3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
+    <fhir-resources.version>5.0.11</fhir-resources.version>
     <docker.imageName>lighthouse-${project.artifactId}</docker.imageName>
   </properties>
   <dependencies>
@@ -23,8 +24,7 @@
     <dependency>
       <groupId>gov.va.api.health</groupId>
       <artifactId>us-core-r4</artifactId>
-      <version>5.0.11</version>
-      <scope>compile</scope>
+      <version>${fhir-resources.version}</version>
     </dependency>
   </dependencies>
   <profiles>
