--- a/scheduling/pom.xml
+++ b/scheduling/pom.xml
@@ -29,5 +29,17 @@
       <artifactId>us-core-r4</artifactId>
       <version>${fhir-resources.version}</version>
     </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>sentinel</artifactId>
+      <version>7.0.15</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>sentinel</artifactId>
+      <version>7.0.15</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
