--- a/scheduling/pom.xml
+++ b/scheduling/pom.xml
@@ -18,6 +18,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>gov.va.api.health</groupId>
@@ -31,7 +32,7 @@
     <dependency>
       <groupId>gov.va.api.health</groupId>
       <artifactId>sentinel</artifactId>
-      <version>7.0.15</version>
+      <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
 </project>
