--- a/scheduling/src/main/resources/application.properties
+++ b/scheduling/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.ssl.client-auth=none
 ssl.use-trust-store=false
 server.ssl.enabled=false
 ssl.enable-client=false
+
+scheduling.base-url=unset
