API-3225: scheduling stubbed support (#2)

--- a/scheduling/pom.xml
+++ b/scheduling/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>service-starter</artifactId>
     <groupId>gov.va.api.health</groupId>
     <version>7.0.15</version>
+    <relativePath/>
   </parent>
   <groupId>gov.va.api.lighthouse</groupId>
   <artifactId>scheduling</artifactId>
@@ -12,6 +13,7 @@
   <packaging>jar</packaging>
   <properties>
     <docker.imageName>lighthouse-${project.artifactId}</docker.imageName>
+    <fhir-resources.version>5.0.11</fhir-resources.version>
   </properties>
   <dependencies>
     <dependency>
@@ -23,5 +25,34 @@
       <groupId>gov.va.api.health</groupId>
       <artifactId>service-auto-config</artifactId>
     </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>us-core-r4</artifactId>
+      <version>${fhir-resources.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>sentinel</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>library-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <classifier>library</classifier>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
