--- a/scheduling-tests/pom.xml
+++ b/scheduling-tests/pom.xml
@@ -12,7 +12,9 @@
   <version>0.0.3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
+    <fhir-resources.version>5.0.11</fhir-resources.version>
     <docker.imageName>lighthouse-${project.artifactId}</docker.imageName>
+    <sentinel.skipLaunch>false</sentinel.skipLaunch>
   </properties>
   <dependencies>
     <dependency>
@@ -20,7 +22,79 @@
       <artifactId>sentinel</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>us-core-r4</artifactId>
+      <version>${fhir-resources.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.lighthouse</groupId>
+      <artifactId>scheduling</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-applications</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}</outputDirectory>
+              <includeArtifactIds>junit-platform-console-standalone,scheduling</includeArtifactIds>
+              <stripVersion>true</stripVersion>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!--
+        Launch scheduling process for IT
+      -->
+      <plugin>
+        <groupId>com.bazaarvoice.maven.plugins</groupId>
+        <artifactId>process-exec-maven-plugin</artifactId>
+        <version>${process-exec-maven-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>scheduling-process</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>start</goal>
+            </goals>
+            <configuration>
+              <name>scheduling</name>
+              <healthcheckUrl>http://localhost:8060/actuator/health</healthcheckUrl>
+              <skip>${sentinel.skipLaunch}</skip>
+              <processLogFile>${project.build.directory}/scheduling.log</processLogFile>
+              <arguments>
+                <argument>java</argument>
+                <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5090</argument>
+                <argument>-cp</argument>
+                <argument>scheduling.jar</argument>
+                <argument>-Dlogging.level.root=INFO</argument>
+                <argument>-Dloader=gov.va.api.lighthouse.scheduling.Application</argument>
+                <argument>-Dspring.config.location=classpath:/application.properties,file:${project.basedir}/config/secrets.properties</argument>
+                <argument>org.springframework.boot.loader.PropertiesLauncher</argument>
+              </arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>stop-all</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>stop-all</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
   <profiles>
     <profile>
       <id>release</id>
