--- a/scheduling-tests/pom.xml
+++ b/scheduling-tests/pom.xml
@@ -78,7 +78,7 @@
                 <argument>-cp</argument>
                 <argument>scheduling.jar</argument>
                 <argument>-Dlogging.level.root=INFO</argument>
-                <argument>-Dloader=gov.va.api.lighthouse.scheduling.Application</argument>
+                <argument>-Dloader=gov.va.api.lighthouse.scheduling.service.Application</argument>
                 <argument>-Dspring.config.location=classpath:/application.properties,file:${project.basedir}/config/secrets.properties</argument>
                 <argument>org.springframework.boot.loader.PropertiesLauncher</argument>
               </arguments>
