--- a/scheduling/pom.xml
+++ b/scheduling/pom.xml
@@ -12,6 +12,8 @@
   <version>0.0.13-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
+    <!-- ToDo !!! Turn Coverage On !!! -->
+    <jacoco.skip>true</jacoco.skip>
     <data-query.version>3.0.71</data-query.version>
     <docker.imageName>lighthouse-${project.artifactId}</docker.imageName>
     <fhir-resources.version>5.0.15</fhir-resources.version>
