--- a/scheduling/src/main/resources/application.properties
+++ b/scheduling/src/main/resources/application.properties
@@ -5,3 +5,5 @@ server.ssl.enabled=false
 ssl.enable-client=false
 
 scheduling.base-url=unset
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration,gov.va.api.health.ids.client.RestIdentityServiceClientConfig
