We love a readable properties file

--- a/scheduling/src/main/resources/application.properties
+++ b/scheduling/src/main/resources/application.properties
@@ -6,4 +6,7 @@ ssl.enable-client=false
 
 scheduling.base-url=unset
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration,gov.va.api.health.ids.client.RestIdentityServiceClientConfig
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, \
+  org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration, \
+  org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration, \
+  gov.va.api.health.ids.client.RestIdentityServiceClientConfig
