Appointment: Datamart Model and Entity (#12)
The initial take on the Appointment Datamart model and database entity based on discussion with the data sources team.

--- a/scheduling/src/main/resources/application.properties
+++ b/scheduling/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.ssl.enabled=false
 ssl.enable-client=false
 
 scheduling.base-url=unset
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, \
+  org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration, \
+  org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
