--- a/scheduling/pom.xml
+++ b/scheduling/pom.xml
@@ -12,14 +12,21 @@
   <version>0.0.13-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
+    <datamart-starter.version>1.0.0</datamart-starter.version>
     <docker.imageName>lighthouse-${project.artifactId}</docker.imageName>
     <fhir-resources.version>5.0.15</fhir-resources.version>
+    <!-- ToDo !!! Turn Coverage On !!! -->
+    <jacoco.skip>true</jacoco.skip>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
     <dependency>
       <groupId>gov.va.api.health</groupId>
@@ -34,6 +41,11 @@
       <groupId>gov.va.api.health</groupId>
       <artifactId>sentinel</artifactId>
       <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>gov.va.api.lighthouse</groupId>
+      <artifactId>lighthouse-starter-datamart</artifactId>
+      <version>${datamart-starter.version}</version>
     </dependency>
   </dependencies>
   <build>
